micro fix overflow for about-us (beta)

--- a/source/less/components/about-us.less
+++ b/source/less/components/about-us.less
@@ -61,7 +61,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100px;
+  flex-basis: 100px;
   font-size: 17px;
   font-weight: bold;
   line-height: 1.18;
